Add: test spec file (It's dummy)

--- a/circle.yml
+++ b/circle.yml
@@ -6,3 +6,7 @@ dependencies:
   override:
     - docker info
     - docker build -t whywaita/docker-latex-jlisting .
+
+test:
+  override:
+    - docker run -i whywaita/docker-latex-jlisting /tmp/spec.sh
