--- a/wercker.yml
+++ b/wercker.yml
@@ -10,17 +10,17 @@ build:
     - script:
         name: docker setup
         code: |
-          wget https://master.dockerproject.org/linux/amd64/docker
-          chmod +x docker.1
-          ./docker.1 -v
+          wget -O docker https://master.dockerproject.org/linux/amd64/docker 
+          chmod +x docker
+          ./docker -v
     - script:
         name: docker build
         code: |
           sudo service docker stop
           sudo /sbin/start-stop-daemon -b -x /pipeline/build/docker.1 -S -- daemon
           sleep 300;echo ".";sleep 300;echo ".";sleep 300;echo "."
-          sudo ./docker.1 build -t whywaita/docker-latex-jlisting .
+          sudo ./docker build -t whywaita/docker-latex-jlisting .
     - script:
         name: docker test
         code: |
-          sudo ./docker.1 run -it whywaita/docker-latex-jlisting /tmp/spec.sh
+          sudo ./docker run -it whywaita/docker-latex-jlisting /tmp/spec.sh
