--- a/wercker.yml
+++ b/wercker.yml
@@ -17,8 +17,8 @@ build:
         name: docker build
         code: |
           #sudo service docker stop
-          #sudo /sbin/start-stop-daemon -b -x /pipeline/build/docker.1 -S -- daemon
-          #sleep 300;echo ".";sleep 300;echo ".";sleep 300;echo "."
+          sudo /sbin/start-stop-daemon -b -x /pipeline/build/docker -S -- daemon
+          sleep 300;echo ".";sleep 300;echo ".";sleep 300;echo "."
           sudo ./docker build -t whywaita/docker-latex-jlisting .
     - script:
         name: docker test
