--- a/wercker.yml
+++ b/wercker.yml
@@ -2,25 +2,25 @@ box: jparyani/docker@1.0.1
 no-response-timeout: 30
 build:
   steps:
-    - script:
-        name: setup env
-        code: |
-          sudo apt-get update
-          sudo apt-get install wget
-    - script:
-        name: docker setup
-        code: |
-          wget -O docker https://master.dockerproject.org/linux/amd64/docker 
-          chmod +x docker
-          ./docker -v
+    #    - script:
+    #        name: setup env
+    #        code: |
+    #          sudo apt-get update
+    #          sudo apt-get install wget
+    #    - script:
+    #        name: docker setup
+    #        code: |
+    #          wget -O docker https://master.dockerproject.org/linux/amd64/docker 
+    #          chmod +x docker
+    #          ./docker -v
     - script:
         name: docker build
         code: |
-          #sudo service docker stop
-          sudo /sbin/start-stop-daemon -b -x ./docker -S -- daemon
-          sleep 5
-          sudo ./docker build -t whywaita/docker-latex-jlisting .
+          sudo service docker start
+    #          sudo /sbin/start-stop-daemon -b -x /pipeline/build/docker -S -- daemon
+    #          sleep 5
+          sudo docker build -t whywaita/docker-latex-jlisting .
     - script:
         name: docker test
         code: |
-          sudo ./docker run -it whywaita/docker-latex-jlisting /tmp/spec.sh
+          sudo docker run -it whywaita/docker-latex-jlisting /tmp/spec.sh
