--- a/wercker.yml
+++ b/wercker.yml
@@ -14,6 +14,15 @@ build:
     #          chmod +x docker
     #          ./docker -v
     - script:
+        name: check env
+        code: |
+          id
+          echo $USER
+          echo $PATH
+          pwd
+          which docker
+          find /* -name "docker"
+    - script:
         name: docker build
         code: |
           sudo service docker start
